styles.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  background-color: #000;
  color: #fff;
  font-family: "Microsoft JhengHei", "微軟正黑體", sans-serif;
  position: relative;
}

.main {
  width: 100%;
}

/* body::before {
  content: "";
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: -1;
  background-image: url("./images/bg_girl.png");
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  opacity: 0.5;
} */

/* @media (max-width:768px) {
  body::before {
    background-image: url("./images/bg_girl_m.png");
  }
} */

.bg-image-fixed {
  position: fixed;
  left: 0;
  right: 0;
  top: 100px;
  bottom: 0;
  background-image: url("./images/bg_girl.png");
  background-size: contain;
  background-position: center;
  background-repeat: no-repeat;
  z-index: -1;
  pointer-events: none;
  opacity: 0.5;
}


@media (max-width: 768px) {
  .bg-image-fixed {
    background-image: url("./images/bg_girl_m.png");
    width: 100%;
  }
}

.container {
  width: 100%;
  /* width: 60%;
  max-width: 1000px; */
  margin: 0 auto;
}

@media (max-width: 768px) {
  .container {
    width: 80%;
  }
}

.header {
  display: flex;
  flex-direction: column;
  background-color: black;
  width: 100%;
  position: fixed;
  top: 0;
  left: 0;
  z-index: 999;
}

.header__upper {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

/* @media (max-width: 430px) {
  .header__upper {
    flex-direction: column;
  }
} */

.header__lower {
  display: flex;
  height: 10px;
}

.header__lower .bar-flex3 {
  flex: 3;
  background-color: #ff00a0;
}

.header__lower .bar-flex1 {
  flex: 1;
  display: flex;
}

.header__lower .bar-flex1 .bar-yellow {
  background-color: yellow;
  flex: 2;
}

.header__lower .bar-flex1 .bar-blue {
  background-color: #00bfff;
  flex: 1;
}

.header .logo-container {
  display: flex;
  flex: 1;
}

@media (max-width: 430px) {
  .header .logo-container {
    width: 100%;
    flex: 2;
  }
}

.header .logo {
  display: flex;
  background-color: #ff00a0;
  padding: 0 5px;
  height: 80px;
  flex-shrink: 0;
  min-width: 150px;
}

@media (max-width: 768px) {
  .header .logo {
    height: 60px;
  }
}

@media (max-width: 768px) {
  .header .logo {
    flex: 3;
  }
}

.header .logo img {
  object-fit: contain;
  width: 100%;
  height: 100%;
}

.square {
  width: 80px;
  background-color: transparent;
  position: relative;
  overflow: hidden;
  /* 防止空隙露出背景色 */
  margin-left: -0.5px;
  margin-bottom: -0.5px;
  flex-shrink: 0;
  min-width: 80px;
}

@media (max-width: 768px) {
  .square {
    width: 60px;
    min-width: 60px;
  }
}

.triangle {
  position: absolute;
  inset: 0;
  background-color: #ff00a0;

  clip-path: polygon(100% 100%, 0% 0%, 0% 100%);
}

.header .title-container {
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  flex: 1;
}

.header .title-container .title {
  font-family: "Noto Serif TC", serif;
  font-optical-sizing: auto;
  font-weight: 700;
  font-style: normal;
  display: inline-block;
  color: #ff00a0;
  font-size: 2.5rem;
  white-space: nowrap;
}

@media (max-width: 430px) {
  .header .title-container .title {
    font-size: 1.8rem;
    padding-right: 10px;
  }
}

.header .nav {
  display: flex;
  justify-content: flex-end;
  align-items: center;
  margin-right: 10px;
  flex: 1;
}

@media (max-width:768px) {
  .header .nav {
    position: fixed;
    top: 90px;
    right: 0;

    background-color: #00bfff;
    border-radius: 10px;
    padding: 10px;
    animation: floaty 2s ease-in-out infinite;

  }
}

@keyframes floaty {
  0%, 100% {
    transform: translateY(0);
  }
  50% {
    transform: translateY(-6px);
  }
}

.header .nav .fa-star {
  height: 100%;
  margin-right: 5px;
}

.header .adult-entry {
  display: inline-block;
  aspect-ratio: 1/1;
  text-decoration: none;
  border-radius: 5px;
  white-space: nowrap;
  color: white;
  font-weight: 600;
}

/* @media (max-width:430px) {
  .header .nav {
    position: fixed;
    background-color: white;
    color: #00bfff;
    padding: .5rem;
    border-radius: 15px;
    bottom: 15px;
    right: 15px;
    z-index: 100;
  }

  .header .adult-entry {
    color: #00bfff;
  }
} */

.hero-swiper {
  width: 70%;
  max-width: 1000px;
  height: auto;
  margin-top: 160px;
  /* 目前圖片比例 2/1 */
}

@media (max-width: 1024px) {
  .hero-swiper {
    margin-top: 160px;
  }
}

@media (max-width: 768px) {
  .hero-swiper {
    width: 90%;
  }
}

@media (max-width: 430px) {
  .hero-swiper {
    margin-bottom: 15%;
  }
}

.hero-swiper .swiper-slide {
  text-align: center;
  background: #000;
  display: flex;
  justify-content: center;
  align-items: center;
}

.hero-swiper .swiper-slide img {
  max-width: 100%;
  max-height: 100%;
  object-fit: cover;
}

/* 導航按鈕客製化 */
.hero-swiper .swiper-button-prev,
.hero-swiper .swiper-button-next {
  color: #ff00a0 !important;
}

/* 分頁器客製化 */
.hero-swiper .swiper-pagination-bullet {
  background: #fff !important;
  opacity: 0.5;
}

.hero-swiper .swiper-pagination-bullet-active {
  background: #ff00a0 !important;
  opacity: 1;
}

.download-section .download-grid {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: 20px;
  margin: 20px 0;
  width: 70%;
  max-width: 1000px;
  margin: 2.5% auto;
}

@media (max-width: 768px) {
  .download-section .download-grid {
    grid-template-columns: 1fr;
    width: 95%;
  }
}

.download-section .download-item {
  background-color: #ff00a050;
  padding: 10px;
  overflow: hidden;
  display: flex;
  flex-direction: column;
}

.download-section .download-image {
  width: 100%;
  aspect-ratio: 5/3;
  margin-bottom: 10px;
}

.download-section .download-image img {
  object-fit: cover;
  width: 100%;
  height: 100%;
}

.download-section .download-buttons {
  display: flex;
  justify-content: space-around;
  align-items: center;
  padding: 5px 0;
  width: 100%;
}

.download-section .download-buttons .btn {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 140px;
  font-size: 19px;
  flex: 1;
  text-align: center;
  padding: 6px;
  text-decoration: none;
  color: #fff;
  background-color: #ff00a0;
  transition: 0.35s ease;
  border-radius: 10px;
  white-space: nowrap;
  flex: 0 0 auto;
}

.download-section .download-buttons .btn .text-en {
  font-size: 20px;
}

@media (max-width: 430px) {
  .download-section .download-buttons .btn {
    transform: scale(0.9);
  }
}

.download-section .download-buttons .btn:hover {
  color: #cc0080;
  background-color: #fff;
}

/* loading Ux */

img {
  opacity: 0;
  transition: 0.35s ease-in;
}

img.loaded {
  opacity: 1;
}

